--- a/index.html
+++ b/index.html
@@ -4,64 +4,82 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Rózsafüzér</title>
+
 <style>
   :root{
-    --bg:#f3f3f3;--text:#111;
-    --bead:#bbb;--bead-active:#6a3;--bead-large:#888;
+    --bg:#f3f3f3; --text:#111;
+    --bead:#bbb;   --bead-active:#6a3; --bead-large:#888;
     --rosary-size:260px;
   }
   body.dark{
-    --bg:#111;--text:#eee;
-    --bead:#555;--bead-active:#9f6;--bead-large:#aaa;
+    --bg:#111; --text:#eee;
+    --bead:#555; --bead-active:#9f6; --bead-large:#aaa;
   }
+
+  /* -------- Alap elrendezés -------- */
   body{
-    margin:0;overflow:visible;
+    margin:0; overflow:hidden;
     font-family:"Times New Roman",Times,serif;
-    background:var(--bg);color:var(--text);
-    display:flex;flex-direction:column;align-items:center;justify-content:flex-start;
-    height:100vh;
-    padding:2rem 1rem 0;
-    text-align:center;line-height:1.4;
-    user-select:none;touch-action:manipulation;
+    background:var(--bg); color:var(--text);
+    display:flex; flex-direction:column; align-items:center; justify-content:flex-start;
+    height:100vh; padding:2rem 1rem;
+    text-align:center; line-height:1.4;
+    user-select:none; touch-action:manipulation;
     transition:background .3s,color .3s;
   }
   #modeToggle{
-    position:fixed;left:1rem;top:1rem;font-size:1.8rem;background:none;border:none;cursor:pointer;color:var(--text);z-index:2;
+    position:fixed; left:.5rem; top:.5rem;
+    font-size:1.9rem; background:none; border:none;
+    cursor:pointer; color:var(--text); z-index:3;
   }
   #prayer{
-    white-space:pre-line;font-size:1.25rem;max-width:600px;
+    white-space:pre-line;
+    font-size:1.25rem;
+    max-width:600px;
+    z-index:2;
   }
   #rosary{
-    position:fixed;right:1rem;top:1rem;
-    width:var(--rosary-size);height:calc(var(--rosary-size)+120px);
+    position:fixed;
+    left:0; right:0; margin:auto;
+    bottom:.5rem;
+    width:var(--rosary-size);
+    height:calc(var(--rosary-size) + 120px);
     pointer-events:none;
+    z-index:1;
   }
-  .bead{position:absolute;width:10px;height:10px;border-radius:50%;background:var(--bead);transition:background .3s;}
-  .bead.large{width:14px;height:14px;background:var(--bead-large);}
+  .bead{
+    position:absolute;
+    width:10px; height:10px;
+    border-radius:50%;
+    background:var(--bead);
+    transition:background .3s;
+  }
+  .bead.large{width:14px; height:14px; background:var(--bead-large);}
   .bead.active{background:var(--bead-active)!important;}
-  /* ---------------- Mobile ---------------- */
+
+  /* -------- Mobil igazítás -------- */
   @media(max-width:600px){
-    :root{--rosary-size:160px;}
-    #rosary{
-      position:absolute;left:50%;bottom:1rem;top:auto;right:auto;
-      transform:translateX(-50%) rotate(90deg);
-    }
+    :root{ --rosary-size:150px; }
     #prayer{
-      font-size:1.05rem;max-width:100%;
-      padding-bottom:calc(var(--rosary-size)+150px);
-      overflow:hidden;text-overflow:clip;
+      font-size:1.05rem;
+      max-width:100%;
+      padding-bottom:calc(var(--rosary-size) + 140px);
+    }
+    #rosary{
+      transform:rotate(90deg);            /* fektetve   */
     }
   }
 </style>
 </head>
+
 <body>
 <button id="modeToggle">🌙</button>
 <div id="prayer"></div>
 <div id="rosary"></div>
 <script>
-/* -------------- Full prayer texts -------------- */
-const CROSS="† Az Atya, a Fiú és a Szentlélek nevében. Ámen.";
-const CREDO=`Hiszek egy Istenben, mindenható Atyában, mennynek és földnek Teremtőjében.
+/* -------- Teljes imák -------- */
+const CROSS = "† Az Atya, a Fiú és a Szentlélek nevében. Ámen.";
+const CREDO = `Hiszek egy Istenben, mindenható Atyában, mennynek és földnek Teremtőjében.
 És Jézus Krisztusban, az Ő egyszülött Fiában, a mi Urunkban,
 aki fogantatott Szentlélektől, született Szűz Máriától,
 szenvedett Poncius Pilátus alatt, megfeszítették, meghalt és eltemették;
@@ -72,7 +90,8 @@ Hiszek Szentlélekben,
 hiszem a katolikus Anyaszentegyházat,
 a szentek közösségét, a bűnök bocsánatát,
 a test feltámadását és az örök életet. Ámen.`;
-const OUR_FATHER=`Miatyánk, aki a mennyekben vagy,
+
+const OUR_FATHER = `Miatyánk, aki a mennyekben vagy,
 szenteltessék meg a Te neved;
 jöjjön el a Te országod;
 legyen meg a Te akaratod, amint a mennyben, úgy a földön is.
@@ -81,20 +100,23 @@ Mindennapi kenyerünket add meg nekünk ma;
 miképpen mi is megbocsátunk az ellenünk vétkezőknek;
 és ne vígy minket kísértésbe,
 de szabadíts meg a gonosztól. Ámen.`;
-const HAIL=ins=>`Üdvözlégy, Mária, kegyelemmel teljes,
+
+const HAIL = ins => `Üdvözlégy, Mária, kegyelemmel teljes,
 az Úr van Teveled;
 áldott vagy Te az asszonyok között,
-és áldott a Te méhednek gyümölcse, Jézus${ins?', '+ins:''}.
+és áldott a Te méhednek gyümölcse, Jézus${ins ? ", " + ins : ""}.
 Asszonyunk Szűz Mária, Istennek Szent Anyja,
 imádkozzál érettünk, bűnösökért,
 most és halálunk óráján. Ámen.`;
-const GLORY="Dicsőség az Atyának, a Fiúnak és a Szentléleknek, miképpen kezdetben, most és mindörökké. Ámen.";
-const FATIMA=`Ó, Jézusom, bocsásd meg bűneinket,
+
+const GLORY = "Dicsőség az Atyának, a Fiúnak és a Szentléleknek, miképpen kezdetben, most és mindörökké. Ámen.";
+const FATIMA = `Ó, Jézusom, bocsásd meg bűneinket,
 ments meg minket a pokol tüzétől,
 vidd a mennybe a lelkeket,
 különösen azokat, akik
 leginkább rászorulnak irgalmadra. Ámen.`;
-const SALVE=`Üdvözlégy, Királynő, irgalmasság Anyja!
+
+const SALVE = `Üdvözlégy, Királynő, irgalmasság Anyja!
 Életünk, édességünk és reménységünk, üdvözlégy!
 Hozzád kiáltunk, Éva számkivetett fiai;
 hozzád sóhajtozunk sírván és zokogván e siralom völgyéből.
@@ -104,86 +126,115 @@ mutasd meg nekünk e számkivetés után,
 ó kegyes, ó irgalmas, ó édes Szűz Mária!
 Imádkozzál érettünk, Istennek szent Anyja,
 hogy méltók lehessünk Krisztus ígéreteire! Ámen.`;
-const CLOSING=`Istenünk, ki egyszülött Fiad életével, halálával és feltámadásával
+
+const CLOSING = `Istenünk, ki egyszülött Fiad életével, halálával és feltámadásával
 megszerezte nekünk az örök üdvösség jutalmát,
 add, kérünk, hogy e szent Rózsafüzér titkait tisztelve
 kövessük, amit tanítanak, és elnyerjük, amit ígérnek.
 Krisztus, a mi Urunk által. Ámen.`;
-/* -------------- Mysteries -------------- */
-const M={joy:[
-'akit Te, Szent Szűz, a Szentlélektől fogantál',
-'akit Te, Szent Szűz, Erzsébetet látogatván hordoztál',
-'akit Te, Szent Szűz, a világra szültél',
-'akit Te, Szent Szűz, a templomban bemutattál',
-'akit Te, Szent Szűz, a templomban megtaláltál'],
-sor:[
-'aki értünk vérrel verítékezett',
-'akit értünk megostoroztak',
-'akit értünk tövissel megkoronáztak',
-'aki értünk a keresztet hordozta',
-'akit értünk keresztre feszítettek'],
-lum:[
-'aki a Jordán vizében megkeresztelkedett',
-'aki a kánai menyegzőn kinyilvánította isteni erejét',
-'aki meghirdette Isten országát',
-'aki a Tábor hegyén megmutatta isteni dicsőségét',
-'aki az Eucharisztiát nekünk adta'],
-glo:[
-'aki a halálból feltámadt',
-'aki a mennybe felment',
-'aki nekünk a Szentlelket elküldte',
-'aki Téged, Szent Szűz, a mennybe felvett',
-'aki Téged, Szent Szűz, a mennyben megkoronázott']};
-function daySet(){return[M.glo,M.joy,M.sor,M.glo,M.lum,M.sor,M.joy][new Date().getDay()];}
-/* -------------- Sequence builder -------------- */
-function build(){
-  const seq=[],t=daySet();
-  seq.push(CROSS,CREDO,OUR_FATHER);
-  for(let i=0;i<3;i++) seq.push(HAIL());
-  seq.push(GLORY);
-  for(let d=0;d<5;d++){
-    seq.push(OUR_FATHER);
-    for(let i=0;i<10;i++) seq.push(HAIL(t[d]));
-    seq.push(GLORY,FATIMA);
-  }
-  seq.push(SALVE,CLOSING,CROSS);
-  return seq;
+/* -------- Titkok -------- */
+const Myst = {
+  joy: [
+    "akit Te, Szent Szűz, a Szentlélektől fogantál",
+    "akit Te, Szent Szűz, Erzsébetet látogatván hordoztál",
+    "akit Te, Szent Szűz, a világra szültél",
+    "akit Te, Szent Szűz, a templomban bemutattál",
+    "akit Te, Szent Szűz, a templomban megtaláltál"
+  ],
+  sor: [
+    "aki értünk vérrel verítékezett",
+    "akit értünk megostoroztak",
+    "akit értünk tövissel megkoronáztak",
+    "aki értünk a keresztet hordozta",
+    "akit értünk keresztre feszítettek"
+  ],
+  lum: [
+    "aki a Jordán vizében megkeresztelkedett",
+    "aki a kánai menyegzőn kinyilvánította isteni erejét",
+    "aki meghirdette Isten országát",
+    "aki a Tábor hegyén megmutatta isteni dicsőségét",
+    "aki az Eucharisztiát nekünk adta"
+  ],
+  glo: [
+    "aki a halálból feltámadt",
+    "aki a mennybe felment",
+    "aki nekünk a Szentlelket elküldte",
+    "aki Téged, Szent Szűz, a mennybe felvett",
+    "aki Téged, Szent Szűz, a mennyben megkoronázott"
+  ]
+};
+function todaySet(){
+  return [Myst.glo, Myst.joy, Myst.sor, Myst.glo, Myst.lum, Myst.sor, Myst.joy][new Date().getDay()];
 }
-let prayers=build(),idx=0;
-/* -------------- Rosary drawing -------------- */
-const ros=document.getElementById('rosary');
-function drawRosary(){
-  ros.innerHTML='';
-  const loop=54,tail=6,R=ros.offsetWidth/2-10,gap=70,start=90+gap/2;
-  const place=(x,y,large)=>{
-    const b=document.createElement('div');
-    b.className='bead'+(large?' large':'');
-    b.style.left=x+'px';b.style.top=y+'px';
+
+/* -------- Ima-szekvencia -------- */
+function buildSeq(){
+  const s = [], T = todaySet();
+  s.push(CROSS, CREDO, OUR_FATHER);
+  for (let i = 0; i < 3; i++) s.push(HAIL());
+  s.push(GLORY);
+  for (let d = 0; d < 5; d++) {
+    s.push(OUR_FATHER);
+    for (let i = 0; i < 10; i++) s.push(HAIL(T[d]));
+    s.push(GLORY, FATIMA);
+  }
+  s.push(SALVE, CLOSING, CROSS);
+  return s;
+}
+let prayers = buildSeq(), idx = 0;
+
+/* -------- Rózsafüzér rajzolás -------- */
+const ros = document.getElementById("rosary");
+function drawRosary() {
+  ros.innerHTML = "";
+  const loop = 54, tail = 6,
+        R = ros.offsetWidth / 2 - 8,
+        gap = 80, start = 90 + gap / 2;
+  const add = (x, y, large) => {
+    const b = document.createElement("div");
+    b.className = "bead" + (large ? " large" : "");
+    b.style.left = x + "px";
+    b.style.top  = y + "px";
     ros.appendChild(b);
   };
-  for(let i=0;i<loop;i++){
-    const a=start+(360-gap)*i/loop;
-    place(R*Math.cos(a*Math.PI/180)+ros.offsetWidth/2,R*Math.sin(a*Math.PI/180)+R+10,i%11===0);
+  for (let i = 0; i < loop; i++) {
+    const a = start + (360 - gap) * i / loop;
+    add(R * Math.cos(a * Math.PI / 180) + ros.offsetWidth / 2,
+        R * Math.sin(a * Math.PI / 180) + R + 8,
+        i % 11 === 0);
   }
-  const baseY=R*2+10;
-  for(let j=0;j<tail;j++){
-    place(ros.offsetWidth/2,baseY+20*j,j===0);
-  }
+  const baseY = R * 2 + 8;
+  for (let j = 0; j < tail; j++)
+    add(ros.offsetWidth / 2, baseY + 18 * j, j === 0);
 }
-function updRos(){
-  const beads=[...ros.children],done=Math.floor(idx/prayers.length*beads.length);
-  beads.forEach((b,i)=>b.classList.toggle('active',i<done));
+function updateBeads() {
+  const beads = [...ros.children],
+        done  = Math.floor(idx / prayers.length * beads.length);
+  beads.forEach((b, i) => b.classList.toggle("active", i < done));
 }
-/* -------------- Display & controls -------------- */
-const out=document.getElementById('prayer'),toggle=document.getElementById('modeToggle');
-function show(){out.textContent=prayers[idx];updRos();}
-document.body.addEventListener('click',e=>{if(e.target!==toggle){idx=(idx+1)%prayers.length;show();}});
-toggle.addEventListener('click',e=>{e.stopPropagation();const d=document.body.classList.toggle('dark');toggle.textContent=d?'☀️':'🌙';localStorage.setItem('dark',d);});
-if(localStorage.getItem('dark')==='true')document.body.classList.add('dark');
-window.addEventListener('resize',()=>{
-  drawRosary();updRos();
+/* -------- Megjelenítés és vezérlés -------- */
+const out=document.getElementById('prayer');
+const btn=document.getElementById('modeToggle');
+
+function show(){ out.textContent = prayers[idx]; updateBeads(); }
+
+document.body.addEventListener('click',e=>{
+  if(e.target!==btn){ idx = (idx+1)%prayers.length; show(); }
 });
-drawRosary();show();
+
+btn.addEventListener('click',e=>{
+  e.stopPropagation();
+  const dark = document.body.classList.toggle('dark');
+  btn.textContent = dark ? "☀️" : "🌙";
+  localStorage.setItem('dark',dark);
+});
+
+if(localStorage.getItem('dark')==='true') document.body.classList.add('dark');
+
+window.addEventListener('resize',()=>{ drawRosary(); updateBeads(); });
+
+drawRosary();
+show();
 </script>
 </body>
 </html>
